<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. David de Andrés and Juan Carlos Ruiz, DISCA - UPV, Development of apps for mobile devices.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/bTextFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="launchShowWidgetsActivity"
            android:text="@string/text_string" />

        <Button
            android:id="@+id/bButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="launchShowWidgetsActivity"
            android:text="@string/buttons" />

        <Button
            android:id="@+id/bWidgets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="launchShowWidgetsActivity"
            android:text="@string/widgets" />
    </LinearLayout>
</ScrollView>